# attachment-loader-arcpy

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  attach_plats_to_feature_layer.py  pyproject.toml
examples/: example_config.json
src/plat_attachment_loader/: __init__.py  arcpy_tools.py  cli.py  config.py  matching.py  planning.py  publish.py  reports.py
tests/: test_matching.py  test_planning.py  test_reports.py
